--- a/portfolio.html
+++ b/portfolio.html
@@ -84,15 +84,15 @@
                 <a class="mainbtn btn2" href="">View</a>
             </div>
         </div>
-        <!-- <div class="project5">
+        <div class="project5">
             <div class="content">
                 <img class="project_img" src="img/project5.png">
-                <h2 class="head">Portfolio Landing Page</h2>
+                <h2 class="head">YouTube Clone</h2>
                 <h3 class="head3">HTML / CSS / JS</h3>
-                <p class="p3">A Landing page with a CSS preloader. Having JavaScript effects and animations.</p>
+                <p class="p3">YouTube Clone </p>
                 <a class="mainbtn btn5" href="">View</a>
             </div>
-        </div> -->
+        </div>
         <div id="contact" class="contact-me">
             <h2>Get In Touch</h2>
             <h3>If you like my work or I can help.</h3>
