--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
                 <h2 class="head">YouTube Clone</h2>
                 <h3 class="head3">HTML / CSS / JS</h3>
                 <p class="p3">YouTube Clone </p>
-                <a class="mainbtn btn5" href="">View</a>
+                <a class="mainbtn btn5" href="https://bobadevishal19.github.io/youtube_clone/">View</a>
             </div>
         </div>
         <div id="contact" class="contact-me">
