--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<ul>
 			<li><a class="active" href="index.html">Home</a></li>
 			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="https://drive.google.com/file/d/1KKTTaByL8ypttzum7mNMKgLllAUf8t7o/view?usp=share_link">Resume</a></li>
+			<li><a href="https://drive.google.com/file/d/1obnV20_mLBcQLt2QXGyLTuhK89PYdOsi/view?usp=share_link">Resume</a></li>
 		</ul>
         </nav>
 	</header>
@@ -54,7 +54,7 @@
     			<img class="skill_img" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/html/html.png" alt="HTML5">
     			<img class="skill_img" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/css/css.png" alt="CSS3">
                 <img class="skill_img" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png" alt="javascript">
-    			<img class="skill_img" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/react/react.png" alt="React">
+<!--     			<img class="skill_img" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/react/react.png" alt="React"> -->
     		</div>
     		<div>
     			<h3>Back End</h3>
@@ -65,7 +65,7 @@
     		<div>
     			<h3>Database</h3>
     			<img class="skill_img" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/mysql/mysql.png" alt="MySQL">
-    			<img class="skill_img" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/mongodb/mongodb.png" alt="MongoDB">
+<!--     			<img class="skill_img" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/mongodb/mongodb.png" alt="MongoDB"> -->
     		</div>
         </div>
         <a class="btn" href="portfolio.html">My Projects</a>
@@ -82,7 +82,7 @@
 		<div class="link">
   			<a class="footer-link" href="index.html">Home</a>
   			<a class="footer-link" href="portfolio.html">Portfolio</a>
-  			<a class="footer-link" href="https://drive.google.com/file/d/1KKTTaByL8ypttzum7mNMKgLllAUf8t7o/view?usp=share_link">Resume</a>
+  			<a class="footer-link" href="https://drive.google.com/file/d/1obnV20_mLBcQLt2QXGyLTuhK89PYdOsi/view?usp=share_link">Resume</a>
   		</div>
   		<div class="footer-social-icons">
         	<ul>
