--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
                 <a class="mainbtn btn4" href="https://bobadevishal19.github.io/workers-diary/">View</a>
             </div>
         </div>
-        <div class="project4">
+<!--         <div class="project4">
             <div class="content">
                 <img class="project_img" src="img/project2.png">
                 <h2 class="head">COD: Mobile Landing Page</h2>
@@ -83,7 +83,7 @@
                 <p class="p3">Call Of Duty Concept Landing Page.</p>
                 <a class="mainbtn btn2" href="">View</a>
             </div>
-        </div>
+        </div> -->
         <div class="project5">
             <div class="content">
                 <img class="project_img" src="img/project5.png">
