--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     	<div id="contact" class="contact-me">
         	<h2>Get In Touch</h2>
         	<h3>If you like my work or I can help.</h3>
+		<p class="p2">MCA Student.</p>
     		<p class="p2">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
     		<a class="btn" href="mailto:bobadevishal19@gmail.com">MESSAGE ME</a>
   		</div>
