--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<img id="top-cloud" src="img/cloud.png" alt="cloud">
 		<div class="Intro">
 			<h1>I'm Vishal </h1>
-	        <p id="p1">a full stack developer.</p>
+	        <p id="p1">Web developer & Cloud solution Architect.</p>
 		</div>
 		<img id="bottom-cloud" src="img/cloud.png" alt="cloud">
 		<img id="mountain" src="img/mountain.png" alt="mountain-img">
@@ -44,7 +44,7 @@
         <div class="profile">
     		<img class="midlogo" src="img/logo.jpg" alt="profilepic">
     		<h2>Hey!</h2>
-    		<p class="p2">I am a computer science student and a full stack developer, lived in Maharashtra, India. I am hard working and passionate towards my work.</p>
+    		<p class="p2">As a web developer and cloud solution architect in AWS and Azure, I specialize in creating and deploying web applications using cloud technologies. I have expertise in programming languages, frameworks, and tools used in web development.</p>
   		</div>
   		<hr>
   		<div class="skills">
@@ -65,14 +65,21 @@
     			<img class="skill_img" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/mysql/mysql.png" alt="MySQL">
     			
     		</div>
+			<div>
+    			<h3>Cloud Services</h3>
+    			<img class="skill_img" src="aws.png" alt="aws">
+				<img class="skill_img" src="azure.png" alt="Azure">
+    		</div>
         </div>
+		<br>
+		<br>
         <a class="btn" href="portfolio.html">My Projects</a>
     	<hr>
     	<div id="contact" class="contact-me">
         	<h2>Get In Touch</h2>
         	<h3>If you like my work or I can help.</h3>
-			<p class="p2">MCA Student.</p>
-    		<p class="p2">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
+			<p class="p2">I compleated my MCA post-graduation degree 2023.</p>
+    		<p class="p2">Additionally, I have experience in designing and implementing cloud-based solutions using AWS and Azure services. I can optimize cloud architecture for performance, cost-effectiveness, and high availability. Please let me know if you have any specific questions.</p>
     		<a class="btn" href="mailto:bobadevishal19@gmail.com">MESSAGE ME</a>
   		</div>
   	</div>
@@ -86,7 +93,6 @@
   		<div class="footer-social-icons">
         	<ul>
 		        <li><a href="https://github.com/bobadevishal19"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-		        <!-- <li><a href="https://www.instagram.com/vishal_bobade_/"><i class="fa fa-medium" aria-hidden="true"></i></a></li> -->
 		        <li><a href="https://www.linkedin.com/in/vishal-bobade-b15987231/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 		        <li><a href="https://www.instagram.com/vishal_bobade_/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
         	</ul>
